[gd_scene load_steps=6 format=3 uid="uid://daqgp3nlba1oi"]

[ext_resource type="Theme" uid="uid://7xe3ua6la8hr" path="res://new_theme.tres" id="1_hmrs3"]
[ext_resource type="Script" path="res://scripts/dialing_logic.gd" id="2_7mj4u"]
[ext_resource type="AudioStream" uid="uid://ccdkbnmd7ntnj" path="res://audio/voicebot1_main/GP_opening.mp3" id="3_orape"]
[ext_resource type="Texture2D" uid="uid://b0wavsxfkj6tg" path="res://rsc/img/watch_del_btn.png" id="4_0a7sn"]
[ext_resource type="Texture2D" uid="uid://qe4kva7ciso0" path="res://rsc/img/watch_call_btn.png" id="5_57yny"]

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="DialScreen" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="CurNum" type="Label" parent="DialScreen"]
layout_mode = 2
theme = ExtResource("1_hmrs3")
theme_override_constants/line_spacing = -50
theme_override_font_sizes/font_size = 30
text = "
9990"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="DialScreen"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_hmrs3")
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 1
columns = 3
script = ExtResource("2_7mj4u")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialScreen/GridContainer"]
stream = ExtResource("3_orape")

[node name="BeepPlayer" type="AudioStreamPlayer" parent="DialScreen/GridContainer"]

[node name="Button1" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "1"

[node name="Button2" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="ButtonDel" type="Button" parent="DialScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("4_0a7sn")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Button0" type="Button" parent="DialScreen/GridContainer" groups=["NumBtn"]]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="ButtonCall" type="Button" parent="DialScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("5_57yny")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="DialScreen/GridContainer/ButtonDel" to="DialScreen/GridContainer" method="_on_button_del_pressed"]
[connection signal="pressed" from="DialScreen/GridContainer/ButtonCall" to="DialScreen/GridContainer" method="_on_button_call_pressed"]
